[project]
name = "sbrorl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "duckdb>=1.3.0",
    "gymnasium>=1.1.1",
    "httpx>=0.28.1",
    "jax[cuda12]>=0.5.3",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "rich>=14.0.0",
    "sbx-rl>=0.20.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
]
