[project]
name = "sbrorl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "duckdb>=1.3.0",
    "gputil>=1.4.0",
    "gymnasium==1.0.0",
    "httpx>=0.28.1",
    "jax[cuda12]>=0.5.3",
    "msgpack-numpy>=0.4.8",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "pyarrow>=17.0.0",
    "ray[air,rllib]>=2.46.0",
    "rich>=14.0.0",
    "sbx-rl>=0.20.0",
    "scikit-learn>=1.7.0",
    "scikit-posthocs>=0.11.4",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.6.0",
    "statsmodels>=0.14.5",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
]
